# watson-agent-squad

sirchmunk/: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  README_zh.md  pyproject.toml  setup.py
sirchmunk/.github/workflows/: docker-image.yaml  publish.yaml
sirchmunk/config/: env.example  mcp_config.json
sirchmunk/docker/: Dockerfile.ubuntu  README.md  build_image.py  docker-compose.yml  entrypoint.sh
sirchmunk/requirements/: core.txt  mcp.txt  web.txt
sirchmunk/scripts/: generate_roster.py  start_web.py  stop_web.py
sirchmunk/src/sirchmunk/: __init__.py  base.py  doc_qa.py  search.py
sirchmunk/src/sirchmunk/agentic/: __init__.py  dir_scan_tool.py  prompts.py  react_agent.py  tools.py
sirchmunk/src/sirchmunk/api/: history.py  knowledge.py  main.py  monitor.py  run_server.py  search.py  settings.py  tools.py
sirchmunk/src/sirchmunk/cli/: __init__.py  cli.py  web_launcher.py
sirchmunk/src/sirchmunk/insight/: __init__.py  text_insights.py
sirchmunk/src/sirchmunk/learnings/: evidence_processor.py  knowledge_base.py
sirchmunk/src/sirchmunk/llm/: __init__.py  prompts.py
sirchmunk/src/sirchmunk/retrieve/: base.py  text_retriever.py
sirchmunk/src/sirchmunk/scan/: base.py  dir_scanner.py  file_scanner.py  web_scanner.py
sirchmunk/src/sirchmunk/schema/: __init__.py  cognition.py  context.py  knowledge.py  metadata.py  request.py  response.py  search_context.py  snapshot.py
sirchmunk/src/sirchmunk/storage/: __init__.py  duckdb.py  knowledge_storage.py
sirchmunk/src/sirchmunk_mcp/: README.md  __init__.py  config.py  server.py  service.py  tools.py
sirchmunk/web/: __init__.py  next.config.js  package-lock.json  package.json  tailwind.config.js
sirchmunk/web/app/: globals.css  layout.tsx  page.tsx
sirchmunk/web/components/: ChatSessionDetail.tsx  FileBrowser.tsx  Mermaid.tsx  RightSidebar.tsx  Sidebar.tsx  SystemStatus.tsx  ThemeScript.tsx  index.ts
sirchmunk/web/context/: GlobalContext.tsx
sirchmunk/web/hooks/: useQuestionReducer.ts  useTheme.ts
sirchmunk/web/lib/: api.ts  i18n.ts  latex.ts  pdfExport.ts  theme-utils.ts  theme.ts
sirchmunk/web/types/: question.ts
(+353 files in other folders)
