[project]
name = "sirchmunk"
dynamic = ["version", "dependencies", "optional-dependencies"]
description = "Sirchmunk: From raw data to self-evolving real-time intelligence."
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "Apache License 2.0"}
authors = [
  {name = "ModelScope Team"},
  {email = "contact@modelscope.cn"}
]
keywords = ["LLM", "Agentic Search", "Embedding-Free", "RAG", "Indexless", "Self-evolving", "Real-time Intelligence", "Multi-modal", "MCP"]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "License :: OSI Approved :: Apache Software License"
]

[project.urls]
Homepage = "https://github.com/modelscope/sirchmunk"

[project.scripts]
sirchmunk = "sirchmunk.cli.cli:run_cmd"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"sirchmunk._web" = [
  "*.js", "*.json", "*.css", "*.ts",
  ".prettierrc*", ".prettierignore",
  "next-env.d.ts",
  "app/**", "components/**", "context/**", "hooks/**", "lib/**",
  "public/**", "types/**",
]

[tool.setuptools.exclude-package-data]
"sirchmunk._web" = [
  "node_modules/**", ".next/**", "out/**", "__pycache__/**",
]

[tool.setuptools.dynamic]
version = {attr = "sirchmunk.version.__version__"}
dependencies = {file = ["requirements/core.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
mcp = {file = ["requirements/mcp.txt"]}
web = {file = ["requirements/web.txt"]}
docs = {file = ["requirements/docs.txt"]}
tests = {file = ["requirements/tests.txt"]}
all = {file = [
  "requirements/mcp.txt",
  "requirements/web.txt",
  "requirements/docs.txt",
  "requirements/tests.txt",
]}
